@startuml

    class Persona {
        - String nombre
        - String ap_paterno
        - String ap_materno
        - String rfc
        - int edad
        - char genero
        + Persona() 
        + Persona(String, String, String, String, int, char) 
        + generarNombreCon() String
        + regresarGenero() String
        + imprimirDatos() void
    }

    class Empleado {
        - String numero_empleado
        - String puesto
        - double salario
        + Empleado() 
        + Empleado(String, String, double, String, String, String, String, int, char) 
        + imprimirDatos() void
        + toString() String
    }

    class EVA2_5_EJEMPLO_HERENCIA {
        + main(String[] args)$
    }

    Persona <|-- Empleado : hereda
    EVA2_5_EJEMPLO_HERENCIA ..> Persona : usa
    EVA2_5_EJEMPLO_HERENCIA ..> Empleado : usa
@enduml